--- a/build.gradle
+++ b/build.gradle
@@ -38,12 +38,9 @@ println archivesBaseName
 
 dependencies
 {
-    if (project.hasProperty("bambooshortPlanName") && project.getProperty("bambooshortPlanName") == "BBM-Dev")
-    compile "dev.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf-dev"
-    else
     compile "com.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf"
     compile "com.builtbroken.armory:Armory:1.7.10-0.5.0b5:deobf"
-    compile "com.builtbroken.codinglib:CodingLib:0.2.4b44:universal"
+    compile "com.builtbroken.codinglib:CodingLib:0.2.4b44"
 }
 
 
