--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,9 @@ println archivesBaseName
 
 dependencies
 {
-    compile "com.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf"
+    compile ("com.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf") { changing = true }
     compile "com.builtbroken.armory:Armory:1.7.10-0.5.0b5:deobf"
-    compile "com.builtbroken.codinglib:CodingLib:0.2.4b48"
+    //compile "com.builtbroken.codinglib:CodingLib:0.2.7b48"
 }
 
 
