--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
@@ -11,39 +12,81 @@ buildscript {
         }
     }
     dependencies {
-      classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-      classpath 'org.ajoberstar:gradle-git:1.3.2'
-      classpath 'org.ajoberstar:grgit:1.4.1'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.saliman:gradle-cobertura-plugin:2.0.0' // cobertura plugin
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
+        classpath 'org.ajoberstar:gradle-git:0.10.1'
     }
 }
 
 plugins {
-  id 'com.gradle.build-scan' version '1.4'
   id "com.matthewprenger.cursegradle" version "1.0.8"
   id 'net.saliman.cobertura' version '2.2.5'
   id 'com.github.kt3k.coveralls' version '2.0.1'
-  //id "com.github.johnrengelman.shadow" version "1.2.2"
-  id "net.franz-becker.gradle-lombok" version "1.3"
-  id 'com.jfrog.bintray' version '1.1'
-  id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.32"
+  id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.50"
 }
 
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/buildScripts/index/index.gradle'
-apply plugin: 'forge'
 apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'jacoco'
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/buildScripts/scripts/forge/deps.gradle'
 
-println archivesBaseName 
-tasks.downloadClient.dependsOn copySrcgen
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+minecraft {
+    replace "required-after:voltzengine", "required-after:voltzengine@[$voltz_engine_version,)"
+}
+
+import org.ajoberstar.grgit.*
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+def currentJvm = org.gradle.internal.jvm.Jvm.current()
+//println "Current Java version = " + currentJvm
+
+/*def gitHash = 'unknown'
+if (new File(projectDir, '.git').exists()) {
+    def repo = Grgit.open(project.file('.'))
+    gitHash = repo.log().find().abbreviatedId
+}
+
+jar {
+     manifest.mainAttributes(
+            "Built-By": System.getProperty('user.name'),
+            "Created-By": currentJvm,
+            "Implementation-Title": archivesBaseName,
+            "Implementation-Version": project.version,
+            "Git-Hash": gitHash,
+            "VoltzEngine-Version": voltz_engine_version)
+}
+
+deobfJar {
+     manifest.mainAttributes(
+            "Built-By": System.getProperty('user.name'),
+            "Created-By": currentJvm,
+            "Implementation-Title": archivesBaseName,
+            "Implementation-Version": project.version,
+            "VoltzEngine-Version": voltz_engine_version,
+            "Git-Hash": gitHash)
+}
+
+sourcesJar {
+     manifest.mainAttributes(
+            "Built-By": System.getProperty('user.name'),
+            "Created-By": currentJvm,
+            "Implementation-Title": archivesBaseName,
+            "Implementation-Version": project.version,
+            "VoltzEngine-Version": voltz_engine_version,
+            "Git-Hash": gitHash)
+}
+*/
 
 dependencies
 {
     compile ("com.builtbroken.voltzengine:VoltzEngine:1.7.10-$voltz_engine_version+:deobf") { changing = true }
-    compile "com.builtbroken.armory:Armory:1.7.10-0.5.0b5:deobf"
-    //compile "com.builtbroken.codinglib:CodingLib:0.2.7b48"
 }
-
 
 jacocoTestReport {
     reports {
