--- a/src/main/resources/META-INF/VE_at.cfg
+++ b/src/main/resources/META-INF/VE_at.cfg
@@ -1,13 +1,20 @@
-# Voltz Engine
+### Voltz Engine
+
+#Item
 public net.minecraft.item.Item field_77774_bZ #String unlocalizedName;  
 public net.minecraft.item.Item field_77791_bV #IIcon itemIcon;
 public net.minecraft.item.Item field_111218_cA #String iconString;
 
+#Block
 public net.minecraft.block.Block field_149768_d #String textureName;
 public net.minecraft.block.Block field_149782_v #float blockHardness
 public net.minecraft.block.Block field_149781_w #float blockResistance
 
+#Potion
 public net.minecraft.potion.Potion field_76425_a #potionTypes
+
+#EntityPlayer
+public net.minecraft.entity.player.EntityPlayer field_71100_bB #foodStats
 
 #FoodStats
 public net.minecraft.util.FoodStats field_75123_d #foodTimer
@@ -25,8 +32,20 @@ public net.minecraft.entity.ai.EntityLookHelper field_75656_e #double posX;
 public net.minecraft.entity.ai.EntityLookHelper field_75653_f #double posY;
 public net.minecraft.entity.ai.EntityLookHelper field_75654_g #double posZ;
 public net.minecraft.entity.ai.EntityLookHelper func_75652_a(FFF)F #updateRotation
+
 public net.minecraft.entity.EntityLiving field_70749_g #lookHelper
 public net.minecraft.entity.EntityLiving field_70765_h #moveHelper
+
+public net.minecraft.entity.ai.EntityAIAttackOnCollide field_75437_f #longMemory
+public net.minecraft.entity.ai.EntityAIAttackOnCollide field_75444_h #classTarget
+public net.minecraft.entity.ai.EntityAIAttackOnCollide field_75439_d #attackTick
+public net.minecraft.entity.ai.EntityAIAttackOnCollide field_75440_e #speedTowardsTarget
+
+public net.minecraft.entity.ai.EntityAIArrowAttack field_75325_h #maxRangedAttackTime
+public net.minecraft.entity.ai.EntityAIArrowAttack field_96561_g #minRangedAttackTime --custom name
+public net.minecraft.entity.ai.EntityAIArrowAttack field_75321_e #entityMoveSpeed
+public net.minecraft.entity.ai.EntityAIArrowAttack field_96562_i #attackPower --custom name
+public net.minecraft.entity.ai.EntityAIArrowAttack field_82642_h #attackRange --custom name
 
 #Arrow
 public net.minecraft.entity.projectile.EntityArrow field_145789_f
@@ -44,10 +63,12 @@ public net.minecraft.client.renderer.RenderGlobal field_147592_B
 
 # RenderGlobal
 public net.minecraft.client.renderer.RenderGlobal field_147592_B
+
 # Blocks
 public-f net.minecraft.block.Block field_149764_J
 public net.minecraft.block.BlockLeavesBase field_150121_P
 public net.minecraft.block.BlockRailBase$Rail func_150650_a()I
+
 # GuiContainer
 public net.minecraft.client.gui.inventory.GuiContainer field_146999_f 
 public net.minecraft.client.gui.inventory.GuiContainer field_147009_r 
@@ -56,16 +77,19 @@ public net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/minecr
 public net.minecraft.client.gui.inventory.GuiContainer func_146981_a(Lnet/minecraft/inventory/Slot;II)Z #isMouseOverSlot
 # GuiScreen
 public net.minecraft.client.gui.GuiScreen field_146292_n #buttonList
+
 # ThreadDownloadImageData
 public net.minecraft.client.renderer.ThreadDownloadImageData field_110559_g #field_110559_g
 public net.minecraft.client.renderer.ThreadDownloadImageData field_110560_d #field_110560_d
 public net.minecraft.world.gen.structure.StructureVillagePieces$Village #cant make village houses w/o this
 public net.minecraft.client.renderer.Tessellator field_78415_z
 public net.minecraft.client.renderer.entity.RenderPlayer field_77109_a #modelBipedMain
+
 # PlayerControllerMP and ItemInWorldManager for blockbreaking
 public net.minecraft.client.multiplayer.PlayerControllerMP func_85182_a(III)Z #sameToolAndBlock
 public net.minecraft.server.management.ItemInWorldManager field_73086_f
 public net.minecraft.server.management.ItemInWorldManager field_73087_g
 public net.minecraft.server.management.ItemInWorldManager field_73099_h
+
 # EntitySlime
 public net.minecraft.entity.monster.EntitySlime func_70799_a(I)V
