--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,12 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
         classpath 'net.saliman:gradle-cobertura-plugin:2.0.0' // cobertura plugin
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-        classpath 'org.ajoberstar:gradle-git:0.10.1'
+        classpath "org.ajoberstar:grgit:2.1.0"
     }
 }
 
 plugins {
-  id "com.matthewprenger.cursegradle" version "1.0.8"
+  id "com.matthewprenger.cursegradle" version "1.0.9"
   id 'net.saliman.cobertura' version '2.2.5'
   id 'com.github.kt3k.coveralls' version '2.0.1'
   id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.50"
@@ -29,6 +29,7 @@ plugins {
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/buildScripts/index/index.gradle'
 apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'jacoco'
+apply plugin: "org.ajoberstar.grgit"
 apply from: 'https://raw.githubusercontent.com/BuiltBrokenModding/BuiltBrokenScripts/buildScripts/scripts/forge/deps.gradle'
 
 sourceCompatibility = 1.8
